<resources>
    <string name="app_name">Applicants</string>
    <string name="write_your_username">Write your username (i.e. John Doe)</string>
    <string name="write_your_password">Write your password (i.e. john_doe)</string>
    <string name="login_image">Login Image</string>
    <string name="login">Login</string>
    <string name="search_applicants_by_document">Search Applicants by Document</string>
    <string name="add_applicant">Add Applicant</string>
    <string name="delete">Delete</string>
    <string name="applicant_photo">Applicant Photo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="see_applicants">See Applicants</string>
    <string name="applicant_menu_logo">Applicant Menu Logo</string>
    <string name="name">Name</string>
    <string name="document">Document</string>
    <string name="lastname">Lastname</string>
    <string name="birthday">Birthday</string>
    <string name="school">School</string>
    <string name="career">Career</string>
    <string name="save_applicant">Save Applicant</string>
    <string name="applicant_document">Applicant Document</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="applicant_lastname">Applicant Lastname</string>
    <string name="applicant_birthday">Applicant Birthday</string>
    <string name="applicant_school">Applicant School</string>
    <string name="applicant_career">Applicant Career</string>
    <string name="add_applicant_icon">Add Applicant Icon</string>
</resources>