<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:background="@drawable/app_background_demote"
    tools:context=".AddActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="20dp"
                android:src="@drawable/add"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/document"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/applicant_document"
            tools:ignore="LabelFor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/applicant_name"
            tools:ignore="LabelFor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/lastname"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/applicant_lastname"
            tools:ignore="LabelFor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/birthday"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/applicant_birthday"
            tools:ignore="LabelFor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/school"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/applicant_school"
            tools:ignore="LabelFor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/career"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/applicant_career"
            tools:ignore="LabelFor"/>
        <Button
            android:id="@+id/btnApplicantAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_demote"
            android:contentDescription="@string/save_applicant"
            android:text="@string/save_applicant"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_applicant_add"
            app:iconGravity="textStart"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />
    </LinearLayout>
</RelativeLayout>