<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="40dp"
    android:paddingHorizontal="20dp"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/ivLoginImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etLoginUsername"
        tools:background="@color/black"
        android:contentDescription="@string/login_image"/>
    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLoginImage"
        app:layout_constraintBottom_toTopOf="@id/etLoginPassword"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:hint="@string/write_your_username"
        tools:ignore="VisualLintTextFieldSize"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLoginUsername"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        tools:ignore="VisualLintTextFieldSize"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/login"/>
</androidx.constraintlayout.widget.ConstraintLayout>